--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 body {
   font-size: 30px;
   background: rgba(30,30,30,1);
-  font-family: 'Syne Mono', monospace;
+  font-family: 'Ubuntu Mono', monospace;
   color: #ffffff;
 }
 
@@ -71,7 +71,7 @@ p1 {
     padding: 0rem 1.4rem;
     color: #ffffff;
     font-size: 30px;
-    font-family: 'Syne Mono', monospace;
+    font-family: 'Ubuntu Mono', monospace;
     position: fixed;
     bottom: 0.8rem;
 }
