--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ p1 {
 #rectangle {
   margin: 0;
   height:80px;
-  background: #2A0080;
+  background: rgba(30,30,30,1);
   position: fixed;
   border-radius: 10px;
   top: 45px;
