--- a/css/main.css
+++ b/css/main.css
@@ -6,31 +6,52 @@ body {
   color: #ffffff;
 }
 
+li {
+  color: #ffffff;
+  transition: 0.5s;
+}
+
+li:hover {
+  color: #6b7f5f;
+  transition: 0.5s;
+}
+
+
 p1 {
   font-size: 40px;
   color: #ffffff;
-  position: fixed;
-  top: 45px;
-  margin: 0;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  top: 25%;
+  transition: 0.5s;
+}
+
+p1:hover {
+  color: #39ff14;
+  transition: 0.5s;
 }
 
 #rectangle {
   margin: 0;
+
   height:80px;
   background: rgba(30,30,30,1);
-  position: fixed;
-  border-radius: 10px;
-  top: 45px;
+  position: relative;
   left: 50%;
+  text-align: center;
+  top: 40px;
   margin-right: -50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);;
+  border-radius: 10px;
   min-width: 350px;
   width: 25%;
+  transition: 0.5s;
 }
 
+#rectangle:hover {
+  width: 30%;
+  color: #39ff14;
+  transition: 0.5s;
+}
 
 #rectangle1 {
   margin: 0;
